--- a/App/src/globals.css
+++ b/App/src/globals.css
@@ -150,7 +150,7 @@ body {
   }
 
   .home-creators {
-    @apply hidden xl:flex flex-col w-72 2xl:w-465 px-6 py-10 gap-10 overflow-scroll custom-scrollbar;
+    @apply hidden xl:flex flex-col w-72 2xl:w-[465px] px-6 py-10 gap-10 overflow-scroll custom-scrollbar;
   }
 
   /* Post Details */
